# miniwdl

./: .coveragerc  .flake8  .gitignore  .gitmodules  .mypy.ini  .pyre_configuration  .readthedocs.yml  .travis.yml  AGENTS.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  POWER.md  README.md  SECURITY.md  mcp.json  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: CI.yml
WDL/: Bundle.py  CLI.py  Document.py  Env.py  Error.py  Expr.py  Lint.py  StdLib.py  Tree.py  Type.py  Value.py  Walker.py  Zip.py  __init__.py  __main__.py  _error_util.py  _grammar.py  _grammar_old.py  _parser.py  _util.py
WDL/LintPlugins/: __init__.py  config.py  plugins.py  safe_walker.py
WDL/runtime/: __init__.py  _io_helpers.py  _statusbar.py  _stdlib.py  _workflow_state.py  cache.py  call_cache.py  config.py  download.py  driver.py  error.py  online.py  plan.py  status.py  task.py  task_container.py  workflow.py
WDL/runtime/backend/: cli_subprocess.py  docker_swarm.py  podman.py  singularity.py  udocker.py
WDL/runtime/config_templates/: default.cfg  linting.cfg
docs/: FAQ.md  Makefile  WDL.rst  add_functions.md  assert.md  check.rst  conf.py  custom_linters_tutorial.md  getting_started.md  index.rst  input_template.rst  linter_configuration.md  linter_patterns.md  linter_testing_framework.md  runner_advanced.md  runner_backends.md  runner_cli.rst  runner_config.md  runner_reference.md  trace_identifiers.md  wdlviz.md  zip.rst
examples/: all_parameter_meta.py  analyze_HCAskylab_tasks.py  analyze_tasks.py  clean_download_cache.sh  clean_download_cache.t  example_linters_demo.py  linter_testing_example.py  paste_wdl_imports.py  run_with_custom_error.py  upload_output_files.sh  wdlviz.py
examples/download_awscli/: miniwdl_download_awscli.py
examples/download_s3parcp/: miniwdl_download_s3parcp.py  setup.py
examples/example_linters/: __init__.py  best_practices_linters.py  performance_linters.py  security_linters.py  style_linters.py
examples/plugin_download_awscli/: miniwdl_download_awscli.py  setup.py
examples/plugin_log_task_usage/: StressTest.wdl  miniwdl_log_task_usage.py  setup.py
examples/plugin_s3_progressive_upload/: miniwdl_s3_progressive_upload.py  setup.py  test.t
examples/plugin_task_omnibus/: miniwdl_task_omnibus_example.py  setup.py
steering/: ecr-pull-through-cache.md  migration-guide-for-nextflow.md  migration-guide-for-wdl.md  troubleshooting.md  workflow-development.md
stubs/: README.md
stubs/argcomplete/: __init__.py
stubs/coloredlogs/: __init__.py
stubs/docker/: __init__.py  errors.py
stubs/importlib_metadata/: __init__.py
stubs/lark/: __init__.py  exceptions.py
stubs/logging/: __init__.py
stubs/psutil/: __init__.py
stubs/pygtail/: __init__.py
stubs/pythonjsonlogger/: jsonlogger.py
stubs/reentry/: __init__.py
stubs/regex/: __init__.py
stubs/ruamel/: yaml.py
stubs/xdg/: __init__.py
test_corpi/: README.md
test_corpi/contrived/: check_quant.wdl  contrived.wdl  empty.wdl  env.wdl  incomplete.wdl  incomplete_call.wdl  incomplete_import.wdl  issue120.wdl  issue596.wdl  issue669.wdl  issue81.wdl  issue82.wdl  non_string_key_map_json.wdl  patient.wdl  person_struct.wdl  scatter_collisions.wdl  tricky_outputs.wdl  unverified_struct.wdl  wdl1.1.wdl  wdl1.2_deprecated_runtime.wdl
test_corpi/contrived/wdl1.2_omnibus/: README.md  inputs.json  main.wdl
test_corpi/contrived/wdl1.2_omnibus/data/: seed.txt  table.tsv
test_corpi/contrived/wdl1.2_omnibus/data/source_dir/: note.txt
test_corpi/contrived/wdl1.2_omnibus/data/source_dir/nested/: extra.txt
test_corpi/contrived/wdl1.2_omnibus/lib/: collection_math.wdl  helpers.wdl  path_text.wdl
test_corpi/contrived/wdl1.2_omnibus/lib/data/: imported_default.txt
tests/: alyssa_ben.txt  bundle.t  check.t  cli.t  context.py  cromwell.t  eval.t  getting_started.t  multi_line_strings.t  multi_line_strings.wdl  multistring.wdl  no_docker_services.py  podman.t  runner.t  singularity.t  skylab.py  skylab_bulk_rna.t  task_env_inputs.wdl  test_0eval.py  test_1doc.py  test_2calls.py  test_2corpi.py  test_3corpi.py  test_3stdlib.py  test_4corpi.py  test_4taskrun.py  test_5stdlib.py  test_5taskrun.py  test_6workflowrun.py  test_7runner.py  test_8cache.py  test_HCAskylab.py  test_cli_argcomplete.py  test_cli_inputs.py  test_corpi.py  test_doc.py  test_eval.py  test_example_linters.py  test_generate_inputs.py  test_input_template.py  (+14 more)
tests/applied/: DVGLx.t  SARS-CoV-2.t  encode_atac_seq.t  getting_started.t  skylab.py  skylab_bulk_rna.t  viral_assemble.t  viral_refbased.t
tests/spec_tests/: config.yaml  spec_tests.py
tools_image/: Dockerfile  README.md
