[metadata]
name = miniwdl
description = Workflow Description Language (WDL) local runner & developer toolkit
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
author = CZI
author-email = security@chanzuckerberg.com
license = MIT
home-page = https://github.com/chanzuckerberg/miniwdl
classifier =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Interpreters

[files]
packages =
    WDL

[entry_points]
console_scripts =
    miniwdl = WDL.CLI:main
miniwdl.plugin.file_download =
    gs = WDL.runtime.download:gsutil_downloader

[pbr]
skip_authors = True
skip_changelog = True
