[metadata]
name = miniwdl
description = Workflow Description Language (WDL) local runner & developer toolkit
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
author = CZI
author-email = security@chanzuckerberg.com
license = MIT
home-page = https://github.com/chanzuckerberg/miniwdl
classifier =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Interpreters

[files]
packages =
    WDL

[entry_points]
console_scripts =
    miniwdl = WDL.CLI:main

[pbr]
skip_authors = True
skip_changelog = True

[options.package_data]
* = py.typed
