[metadata]
name = miniwdl
description = Workflow Description Language (WDL) local runner & developer toolkit
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = CZI
author_email = security@chanzuckerberg.com
url = https://github.com/chanzuckerberg/miniwdl
classifiers =
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Interpreters

[options]
packages = find:
include_package_data = False
python_requires = >=3.10
install_requires =
    regex>=2020.4.4
    xdg>=5.0.0
    docker>=3.4.0
    ruamel.yaml~=0.19
    argcomplete>=3,<4
    pygtail~=0.14
    coloredlogs>=15,<16
    python-json-logger>=3.1,<5
    lark~=1.3
    questionary>=2,<3
    psutil>=5,<8

[options.packages.find]
where = .
include = WDL*

[options.package_data]
WDL = py.typed
WDL.runtime = config_templates/default.cfg

[options.entry_points]
console_scripts =
    miniwdl = WDL.CLI:main

[options.extras_require]
dev =
    ruff
    mypy
    pytest
    testfixtures
    pytest-xdist
    pytest-cov
    coverage
    python-coveralls
    build
    wheel
    twine
    sphinx
    sphinx-autobuild
    sphinx_rtd_theme
    sphinx-argparse
    recommonmark
    graphviz
    boto3

[tool:setuptools_scm]
write_to = WDL/_version.py
